Исправления для тестов